src/client/css/styles.css
/* ... */
.service-item i {
  display: inline-block;
  width: 60px;
  height: 60px;
  line-height: 60px;
  font-size: 24px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  border: 1px solid #ababab;
  margin-bottom: 20px;
}
.service-item h6 {
  margin-bottom: 10px;
  font-size: 22px;
  margin-top: 0;
  letter-spacing: 1px;
  text-transform: uppercase;
}
.service-item p:last-child {
  margin-bottom: 0;
}
.service-item:hover {
  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
}
.testimonial-items .owl-dots {
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  transform: translateX(-50%);
  padding-bottom: 10px;
}
.testimonial-items .owl-dots .owl-dot {
  display: inline-block;
  width: 12px;
  height: 4px;
  background-color: #444444;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  margin-right: 5px;
  -webkit-transition: width 0.3s ease;
  -moz-transition: width 0.3s ease;
  -ms-transition: width 0.3s ease;
  -o-transition: width 0.3s ease;
  transition: width 0.3s ease;
}
.testimonial-items .owl-dots .owl-dot:last-child {
  margin-right: 0;
}
.testimonial-items .owl-dots .owl-dot.active {
  width: 20px;
}
.testimonial-item {
  text-align: center;
  padding: 50px 100px 40px;
  background-color: #f7f7f7;
  cursor: e-resize;
}
.testimonial-image {
  width: 70px;
  height: 70px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  overflow: hidden;
  display: inline-block;
  float: left;
}
.testimonial-info {
  display: inline-block;
  padding-top: 10px;
}
.testimonial-info:after {
  content: '';
  clear: both;
  display: block;
}
.testimonial-name {
  float: left;
  padding-left: 20px;
  text-align: left;
}
.testimonial-name h6 {
  margin-top: 10px;
  font-size: 16px;
  margin-bottom: 0;
  text-transform: uppercase;
  letter-spacing: 1px;
}
.testimonial-name .position {
  font-size: 14px;
}
/* ===========  5. Featured Slider  =========== */
.featured-slider-wrap .header-text {
  padding-top: 60px;
  font-size: 48px;
  line-height: 1.4em;
  max-width: 750px;
  text-align: center;
  font-family: 'Fjalla One', sans-serif;
  margin-left: auto;
  margin-right: auto;
}
.slider-one {
  background-image: url(../images/blueprint_hammer.jpg);
  background-color: #eeeeee;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.slider-two {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/slider/2.jpeg);
  background-color: #eeeeee;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.slider-three {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/slider/3.jpeg);
  background-color: #eeeeee;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.featured-slider-wrap .image {
  padding-bottom: 0;
  /* default: calc(100vh - 80px); */
  height: calc(100vh - 320px);
  position: relative;
  z-index: 1;
  -webkit-transition: opacity 0.3s ease;
  -moz-transition: opacity 0.3s ease;
  -ms-transition: opacity 0.3s ease;
  -o-transition: opacity 0.3s ease;
  transition: opacity 0.3s ease;
}
.featured-slider-wrap .image:after {
  content: '';
  content: normal;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1;
  background-color: #000000;
  opacity: 0.3;
}
.featured-slider-wrap .image a {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.featured-slider-wrap a {
  -webkit-transition: none;
  -moz-transition: none;
  -ms-transition: none;
  -o-transition: none;
  transition: none;
}
.featured-slider-wrap .item {
  position: relative;
}
.call-to-action {
  padding: 12px 20px;
  background-color: #fa7f00;
  color: #ffffff;
  border-radius: 3px;
}
.call-to-action:hover {
  background-color: #e48522;
  color: #ffffff !important;
}
.featured-slider-wrap .item-content {
  position: absolute;
  top: 51%;
  left: 30%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  z-index: 33;
  background-color: rgba(0, 0, 0, 0.59);
  padding: 50px 50px 45px;
  text-align: center;
  visibility: hidden;
  opacity: 0;
  color: #ffffff;
  -webkit-transition: visibility 0.3s ease, opacity 0.3s ease, top 0.3s ease;
  -moz-transition: visibility 0.3s ease, opacity 0.3s ease, top 0.3s ease;
  -ms-transition: visibility 0.3s ease, opacity 0.3s ease, top 0.3s ease;
  -o-transition: visibility 0.3s ease, opacity 0.3s ease, top 0.3s ease;
  transition: visibility 0.3s ease, opacity 0.3s ease, top 0.3s ease;
}
.featured-slider-wrap .item-content p {
  margin-bottom: 0;
}
.featured-slider-wrap .active .item-content {
  visibility: visible;
  opacity: 1;
  top: 50%;
}
.featured-slider-wrap .title {
  color: #ffffff;
  font-size: 36px;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 10px;
}
.featured-slider-wrap .title a:hover {
  color: inherit !important;
  opacity: 0.8;
}
.featured-slider-wrap .post-details {
  display: inline-block;
}
.featured-slider-wrap .post-details a {
  color: #ababab;
}
.featured-slider-wrap .post-cats a {
  text-decoration: underline;
  color: #ffffff;
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 1px;
}
.featured-slider-wrap .post-cats a + a {
  display: none;
}
.owl-nav {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  font-size: 11px;
  height: 1px;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  transform: translateY(-50%);
}
/* ... */

